--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "authorship_tag": "ABX9TyMGvhKMmKg5yclj6Wc3MQ74",
-      "include_colab_link": true
+      "include_colab_link": false
     },
     "kernelspec": {
       "name": "python3",
